--- a/dash/package.json
+++ b/dash/package.json
@@ -6,8 +6,11 @@
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "cra-template": "1.1.2",
+    "history": "^5.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router": "^5.2.1",
+    "react-router-dom": "^6.0.0-beta.2",
     "react-scripts": "4.0.3",
     "web-vitals": "^2.1.0"
   },
