--- a/dash/package.json
+++ b/dash/package.json
@@ -3,8 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.4.1",
+    "@emotion/styled": "^11.3.0",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
+    "@mui/icons-material": "^5.0.3",
+    "@mui/material": "^5.0.3",
+    "chart.js": "^3.5.1",
     "cra-template": "1.1.2",
     "history": "^5.0.1",
     "react": "^17.0.2",
@@ -12,6 +17,7 @@
     "react-router": "^5.2.1",
     "react-router-dom": "^6.0.0-beta.2",
     "react-scripts": "4.0.3",
+    "styled-components": "^5.3.1",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
